Mine, loading job, autorefresh
Component Mine
To manage a complete resource extraction and chest.

Loading Bar and job connection
Hand mining job has an id and the loading bar can connect to it.

Autorefresh
All components inherits from Game_Component, which manages auto refresh.

--- a/code/Blazora/Components/Chest.razor
+++ b/code/Blazora/Components/Chest.razor
@@ -1,4 +1,4 @@
-﻿
+﻿@inherits Game_Component
 
 
 <style>
@@ -15,7 +15,10 @@
     }
 </style>
 
+
+
 <div class="chest">
+
     @for (int i = 0; i < 16; i++)
     {
         string pic_filename = null;
@@ -23,7 +26,6 @@
         {
             pic_filename = this.picture_filename;
         }
-
         <div class="chest_cell">
             <Butticon picture_filename=@pic_filename/>
         </div>
@@ -36,5 +38,8 @@
 
     [Parameter] public int val { get; set; }
     [Parameter] public string picture_filename { get; set; }
+
+
+
 
 }
