--- a/code/Blazora/Components/LoadingBar.razor
+++ b/code/Blazora/Components/LoadingBar.razor
@@ -1,4 +1,4 @@
-﻿
+﻿@inherits Game_Component
 
 <style>
     .progressbar_container
@@ -63,5 +63,8 @@
 
         return content_width;
     }
+
+
+
 
 }
