--- a/code/Blazora/Pages/Guerre.razor
+++ b/code/Blazora/Pages/Guerre.razor
@@ -49,9 +49,9 @@
     private static bool victory = false;
 
 
-    public override void update_logical ()
+    public override void logical_update ()
     {
-        base.update_logical ();
+        base.logical_update ();
         CountDownTimer ();
     }
 
