--- a/code/Blazora/Components/LoadingBar.razor
+++ b/code/Blazora/Components/LoadingBar.razor
@@ -34,14 +34,16 @@
 
 @code {
 
-    [Parameter] public int val_current { get; set; } = 0;
     [Parameter] public int val_max { get; set; } = 100;
     [Parameter] public int width { get; set; }
     [Parameter] public int height { get; set; }
+    [Parameter] public Func<int> val_func { get; set; }
 
     public int get_content_width ()
     {
-        int val = this.val_current;
+        int val_current = this.val_func ();
+
+        int val = val_current;
         if (val < 0)
         {
             val = 0;
@@ -51,7 +53,7 @@
             val = this.val_max;
         }
 
-        float percentage = this.val_current / (float)this.val_max;
+        float percentage = val_current / (float)this.val_max;
 
         float content_width_original = percentage * (this.width - 1);
         content_width_original = (float)Math.Ceiling (content_width_original);
@@ -65,6 +67,11 @@
     }
 
 
+    public override void listener_setup ()
+    {
+        base.listener_setup ();
+        listener_add (this.val_func);
+    }
 
 
 }
