--- a/code/Blazora/Components/Butticon.razor
+++ b/code/Blazora/Components/Butticon.razor
@@ -9,7 +9,7 @@
             left: 2px;
             position: absolute;
             " 
-            src="Images/@picture_filename"/>
+            src="images/@picture_filename"/>
     }
 
     @if (val > 0)
