--- a/code/Blazora/Pages/Factorio.razor
+++ b/code/Blazora/Pages/Factorio.razor
@@ -18,32 +18,17 @@
 <h3>Factorio</h3>
 
 
-<Mine resource_name="coal" hand_recipe_text="coal*1 + time*50 => coal*2" />
-
+<Mine resource_name="coal" hand_recipe_text="time*50 => coal*1" />
 
 <div>
-    Factorio Coal: @MR("coal").quantity
+    <br />
+    <br />
 </div>
 
-<Mine resource_name="coal" hand_recipe_text="coal*1 + time*50 => coal*2" />
+<Mine resource_name="wood" hand_recipe_text="time*50 => wood*1" />
 
 
-<Mine resource_name="coal" hand_recipe_text="coal*1 + time*50 => coal*2" />
 
-
-<Mine resource_name="coal" hand_recipe_text="coal*1 + time*50 => coal*2" />
-
-
-<Mine resource_name="coal" hand_recipe_text="coal*1 + time*50 => coal*2" />
-
-
-<Mine resource_name="coal" hand_recipe_text="coal*1 + time*50 => coal*2" />
-
-
-<Mine resource_name="coal" hand_recipe_text="coal*1 + time*50 => coal*2" />
-
-
-<Mine resource_name="coal" hand_recipe_text="coal*1 + time*50 => coal*2" />
 
 
 @code{
