--- a/code/Blazora/Shared/NavMenu.razor
+++ b/code/Blazora/Shared/NavMenu.razor
@@ -33,6 +33,11 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="factorio2">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Factorio 2
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="test">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Test
             </NavLink>
