--- a/code/Blazora/Components/Game_Component.razor
+++ b/code/Blazora/Components/Game_Component.razor
@@ -1,8 +1,19 @@
-﻿@implements IDisposable
+﻿@using BlazorApp.Shared.Models
+@implements IDisposable
+
+@code{
+    
+    [Parameter] public Position position { get; set; }
+
+}
+
+
+
 
 @code {
-
-    List<KeyValuePair<Func<int>, int>> list_kvp_func_val = new List<KeyValuePair<Func<int>, int>> ();
+    
+    List<KeyValuePair<Func<int>, int>> list_kvp_func_val_number = new List<KeyValuePair<Func<int>, int>> ();
+    List<KeyValuePair<Func<string>, string>> list_kvp_func_val_text = new List<KeyValuePair<Func<string>, string>> ();
 
 
     protected override void OnInitialized()
@@ -33,24 +44,42 @@
     {
 
     }
-
+    
     public void listener_add (Func<int> func)
     {
-        list_kvp_func_val.Add (new KeyValuePair<Func<int>, int> (func, 0));
+        list_kvp_func_val_number.Add (new KeyValuePair<Func<int>, int> (func, 0));
+    }
+
+    public void listener_add (Func<string> func)
+    {
+        list_kvp_func_val_text.Add (new KeyValuePair<Func<string>, string> (func, ""));
     }
 
     public void listener_update ()
     {
-        for (int i=0; i<this.list_kvp_func_val.Count; i++)
+        for (int i=0; i<this.list_kvp_func_val_number.Count; i++)
         {
-            KeyValuePair<Func<int>, int> kvp_func_val = list_kvp_func_val[i];
+            KeyValuePair<Func<int>, int> kvp_func_val = list_kvp_func_val_number[i];
 
             Func<int> func = kvp_func_val.Key;
             int func_val = func ();
             int val = kvp_func_val.Value;
             if (func_val != val)
             {
-                list_kvp_func_val[i] = new KeyValuePair<Func<int>, int> (func, func_val);
+                list_kvp_func_val_number[i] = new KeyValuePair<Func<int>, int> (func, func_val);
+                this.need_refresh = true;
+            }
+        }
+        for (int i=0; i<this.list_kvp_func_val_text.Count; i++)
+        {
+            KeyValuePair<Func<string>, string> kvp_func_val = list_kvp_func_val_text[i];
+
+            Func<string> func = kvp_func_val.Key;
+            string func_val = func ();
+            string val = kvp_func_val.Value;
+            if (func_val != val)
+            {
+                list_kvp_func_val_text[i] = new KeyValuePair<Func<string>, string> (func, func_val);
                 this.need_refresh = true;
             }
         }
