--- a/code/Blazora/Components/Cellicon.razor
+++ b/code/Blazora/Components/Cellicon.razor
@@ -21,29 +21,6 @@
 
 
 <style>
-    .layer
-    {
-        top: 0px;
-        left: 0px;
-        position: absolute;
-        width: 100%;
-        height: 100%;
-    }
-
-    .text_wb
-    {
-        color: white;
-        text-shadow: -1px 1px 0 #000, 1px 1px 0 #000, 1px -1px 0 #000, -1px -1px 0 #000;
-        line-height: 10px;
-        font-family: MONOSPACE;
-        position: absolute;
-    }
-
-    .activable2:hover
-    {
-        cursor: pointer;
-        background-color: rgba(255, 255, 255, 0.3);
-    }
 
 
 </style>
@@ -143,7 +120,7 @@
     <!-- action -->
     @if (action != null)
     {
-        <div class="layer" style="" @onclick="@action_click" @onmouseover="mouse_in" @onmouseout="mouse_out" />
+        <div class="layer activable" style="" @onclick="@action_click" @onmouseover="mouse_in" @onmouseout="mouse_out" />
     }
 
 
