--- a/code/Blazora/Components/BGenerator.razor
+++ b/code/Blazora/Components/BGenerator.razor
@@ -20,7 +20,7 @@
 
 </style>
 
-@code{
+@{
     int s = Program.cell_size;
 }
 
@@ -41,78 +41,33 @@
 }
 
 
-@{ 
 
-}
 
 <div style="
     width: 256px;
     height: @(chest_height)px;
     position: relative;
     ">
-
-
-
-    @for (int i = 0; i < this.recipe.get_component_count (); i++)
-    {
-        Resource_Stack component_stack = this.recipe.mix_component.list_resource_stack[i];
-
-        // Global stock
-        int glob_val = Game_Engine.self
-            .manager_resource
-            .from_resource_name_get_resource_stack (component_stack.resource_name)
-            .quantity;
-
-        <Cellicon picture_filename=@(Resource.from_resource_name_get_resource_filename (component_stack.resource_name))
-                    position=@(new Position (s * 0, s * i, s, s))
-                    text_bottom_right=@(glob_val.ToString ())
-                    />
-
-
-
-
-        int loc_val = this.generator.manager_resource.from_resource_name_get_resource_stack (component_stack.resource_name).quantity;
-        int loc_min = get_stack_tool ().quantity;
-
-        <Cellicon picture_filename=@(Resource.from_resource_name_get_resource_filename (component_stack.resource_name))
-                    position=@(new Position (s * 3, s * i, s, s))
-                    action=@(() =>
-                              {
-                                  Console.WriteLine ($"{component_stack.resource_name}_in_tool_kind");
-                                  Manager_Resource.resource_transfer (
-                                      Game_Engine.self.manager_resource,
-                                      this.generator.manager_resource,
-                                      component_stack.resource_name, 
-                                      1);
-                                  this.need_refresh = true;
-                              })
-                    text_bottom_right=@($"{loc_val}/{loc_min}")
-                    />
-
-
-
-    }
-
     @{ 
         Resource_Stack stack_tool = get_stack_tool ();
     }
 
+    @if (stack_tool.resource_name != "pickaxe")
+    {
+        <Component_Line_Machine 
+                            recipe=@(this.recipe) 
+                            bgenerator=@(this)
+                            />
+    }
+    else
+    {
+        <Component_Line_Pickaxe
+                            recipe=@(this.recipe) 
+                            bgenerator=@(this)
+                            />
+    }
 
-    <!-- Line 1 -->
-    <Cellicon picture_filename=@(Resource.from_resource_name_get_resource_filename (stack_tool.resource_name))
-                position=@(new Position (s*4, s*0, s, s))
-                action=@(() => 
-                         { 
-                             Console.WriteLine ($"tool {stack_tool.resource_name}"); 
-                             Manager_Resource.resource_transfer (
-                                Game_Engine.self.manager_resource,
-                                this.generator.manager_resource,
-                                stack_tool.resource_name, 
-                                1);
-                             this.need_refresh = true;
-                         })
-                text_bottom_right=@(stack_tool.quantity.ToString ())
-                />
+
     @{ 
         Resource_Stack stack_result = recipe.mix_result.list_resource_stack[0];
     }
@@ -156,8 +111,8 @@
     
     <Cellicon picture_filename="time.png"
                 position=@(new Position (s*0, s*(start_line+2), s, s))
-                action=hand_crafting
-                action_authorize=action_is_ready
+                action=craft
+                action_authorize=craft_is_ready
                 text_bottom_right=@((this.recipe.time / 60).ToString ())
                 />
 
@@ -170,6 +125,7 @@
                 val_func="@get_job_time_percentage" 
                 val_max="100"
                 />
+
 
     <Cellicon picture_filename=@(Resource.from_resource_name_get_resource_filename (stack_result.resource_name))
                 position=@(new Position (s*7, s*(start_line+2), s, s))
@@ -184,7 +140,7 @@
 
 @code{
 
-    public bool action_is_ready ()
+    public bool craft_is_ready ()
     {
         if (get_job () != null)
         {
@@ -198,14 +154,63 @@
             return false;
         }
 
-        Generator generator = Game_Engine.self
-            .manager_generator.from_recipe_get_generator (this.recipe);
+        string result_resource_name = get_result_resource_name ();
+        int result_quantity_max = Game_Engine.self.manager_resource.from_resource_name_get_stock_resource_quantity_max (result_resource_name);
+        int result_quantity = Game_Engine.self.manager_resource.from_resource_name_get_resource_quantity (result_resource_name);
+
+        if (result_quantity >= result_quantity_max)
+        {
+            return false;
+        }
+
+        if (stack_tool.resource_name != "pickaxe")
+        {
+            Generator generator = Game_Engine.self
+                .manager_generator.from_recipe_get_generator (this.recipe);
+
+            bool ready = generator.manager_resource.can_craft (this.recipe.mix_component * stack_tool.quantity);
+            return ready;
+        }
+        else
+        {
+            bool ready = Game_Engine.self.manager_resource.can_craft (this.recipe.mix_component * stack_tool.quantity);
+            return ready;
+        }
+
+    }
 
 
-        bool ready = generator.manager_resource.can_craft (this.recipe.mix_component * stack_tool.quantity);
+    public void craft ()
+    {
+        if (craft_is_ready () == false)
+        {
+            return;
+        }
+
+        Resource_Stack resource_stack = Game_Engine.self.manager_resource
+            .from_resource_name_get_resource_stack (get_result_resource_name ());
+        if (resource_stack.amount_max_reached () == true)
+        {
+            return;
+        }
+
+        Resource_Stack stack_tool = get_stack_tool ();
+
+        this.generator.manager_resource.from_resource_mix_remove_resource (recipe.mix_component * stack_tool.quantity);
+        this.need_refresh = true;
+
+        Resource_Mix mix_result = recipe.mix_result * stack_tool.quantity;
+
+        Action action = delegate ()
+        {
+            Game_Engine.self.manager_resource.from_resource_mix_add_resource (mix_result);
+            this.need_refresh = true;
+        };
 
 
-        return ready;
+        Job job = Game_Engine.self.manager_job.from_action_and_time_total_add_job (action, recipe.time);
+        job.id = get_job_id ();
+
     }
 
 
@@ -228,43 +233,10 @@
 
         Resource.dico_resource_name_plus_stack_resource_quantity_max[stack_result.resource_name] =
             stack_resource_quantity_max_future;
-        Game_Engine.self.manager_resource.from_resource_name_and_resource_quantity_set_resource_quantity (
-            stack_result.resource_name, stack_resource_quantity_max_future);
+        //Game_Engine.self.manager_resource.from_resource_name_and_resource_quantity_set_resource_quantity (
+        //    stack_result.resource_name, stack_resource_quantity_max_future);
     }
 
-
-
-    public void hand_crafting ()
-    {
-        Job job_current = get_job ();
-        if (job_current != null)
-        {
-            return;
-        }
-
-        Resource_Stack resource_stack = Game_Engine.self.manager_resource
-            .from_resource_name_get_resource_stack (get_resource_name ());
-        if (resource_stack.amount_max_reached () == true)
-        {
-            return;
-        }
-
-        Resource_Stack stack_tool = get_stack_tool ();
-
-        this.generator.manager_resource.from_resource_mix_remove_resource (recipe.mix_component * stack_tool.quantity);
-        this.need_refresh = true;
-
-        Action action = delegate ()
-        {
-            Game_Engine.self.manager_resource.from_resource_mix_add_resource (recipe.mix_result * stack_tool.quantity);
-            this.need_refresh = true;
-        };
-
-
-        Job job = Game_Engine.self.manager_job.from_action_and_time_total_add_job (action, recipe.time);
-        job.id = get_job_id ();
-
-    }
 
 
     public Resource_Stack get_stack_tool ()
@@ -304,10 +276,25 @@
     }
 
 
-    public string get_resource_name ()
+    public string get_result_resource_name ()
     {
         return this.recipe.mix_result.list_resource_stack[0].resource_name;
     }
 
+
+    public override void listener_setup ()
+    {
+        base.listener_setup ();
+        List<string> list_resource_name =
+            this.recipe.mix_component.list_resource_stack
+            .Concat (this.recipe.mix_result.list_resource_stack)
+            .Select (resource_stack => resource_stack.resource_name)
+            .ToList ();
+
+        foreach (string resource_name in list_resource_name)
+        {
+            listener_add (() => Game_Engine.self.manager_resource.from_resource_name_get_resource_quantity (resource_name));
+        }
+    }
 
 }
