--- a/code/Blazora/Shared/NavMenu.razor
+++ b/code/Blazora/Shared/NavMenu.razor
@@ -8,8 +8,13 @@
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <ul class="nav flex-column">
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="home" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
+            <NavLink class="nav-link" href="factorio">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Factorio
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="guerre">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Guerre
             </NavLink>
         </li>
         <li class="nav-item px-3">
@@ -20,21 +25,6 @@
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="fetchdata">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="guerre">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Guerre
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="factorio2">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Factorio 2
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="test">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Test
             </NavLink>
         </li>
     </ul>
