--- a/code/Blazora/Components/Game_Component.razor
+++ b/code/Blazora/Components/Game_Component.razor
@@ -87,7 +87,7 @@
 
 
 
-    public void Dispose()
+    public virtual void Dispose ()
     {
         Blazora.Pages.Game_Page.graphical_action -= graphical_update;
     }
