--- a/code/Blazora/Components/BGenerator.razor
+++ b/code/Blazora/Components/BGenerator.razor
@@ -34,11 +34,11 @@
 
     @if (stack_tool.resource_name != "pickaxe")
     {
-        <Component_Line_Machine recipe=@(this.recipe) />
+        <Component_Line_Machine />
     }
     else
     {
-        <Component_Line_Pickaxe recipe=@(this.recipe) />
+        <Component_Line_Pickaxe />
     }
 
 
