--- a/code/Blazora/Components/BGenerator_Component.razor
+++ b/code/Blazora/Components/BGenerator_Component.razor
@@ -5,7 +5,8 @@
 @using Pages
 
 @code {
-    [Parameter] public Recipe2 recipe { get; set; }
+    [CascadingParameter] public Recipe2 recipe { get; set; }
+
 }
 
 
