--- a/code/Blazora/Components/Component_Line_Machine.razor
+++ b/code/Blazora/Components/Component_Line_Machine.razor
@@ -6,7 +6,7 @@
 
 
 
-<Component_Line_Stock recipe=@(this.recipe) />
+<Component_Line_Stock />
 
 @{ 
     Resource_Stack stack_tool = this.bgenerator.get_stack_tool ();
